<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.alejobootcampandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.alejobootcampandroid.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <argument
            android:name="userName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="Alejo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.alejobootcampandroid.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user"/>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.alejobootcampandroid.ui.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.alejobootcampandroid.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login"/>
</navigation>