<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold_yellow"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_user"
        style="@style/login_userdata"
        android:layout_marginBottom="@dimen/margin_bottom_10"
        android:text="@string/txt_user"
        app:layout_constraintBottom_toTopOf="@+id/ev_user"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <TextView
        android:id="@+id/tv_login_password"
        style="@style/login_userdata"
        android:layout_marginBottom="@dimen/margin_bottom_10"
        android:text="@string/txt_password"
        app:layout_constraintBottom_toTopOf="@id/ev_password"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/tv_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/txt_join_with"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/tv_login_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/civ_facebook"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_16"
        android:gravity="center"
        android:text="@string/txt_forgot_pwd"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <EditText
        android:id="@+id/ev_user"
        style="@style/login_edit_text"
        android:layout_marginBottom="@dimen/margin_bottom_16"
        app:layout_constraintBottom_toTopOf="@id/tv_login_password"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <EditText
        android:id="@+id/ev_password"
        style="@style/login_edit_text"
        android:layout_marginBottom="@dimen/margin_bottom_10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/tv_forgot_password"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        style="@style/login_button"
        android:layout_marginBottom="@dimen/margin_bottom_24"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@id/tv_login_with"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_24"
        android:text="@string/txt_have_account"
        android:textSize="@dimen/tv_userdata"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_guest"
        app:layout_constraintEnd_toStartOf="@+id/tv_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signup"
        android:textSize="@dimen/tv_userdata"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_guest"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toTopOf="@+id/tv_have_account"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_guest"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_login_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/margin_bottom_16"
        app:layout_constraintBottom_toTopOf="@id/tv_login_user"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imdb_logo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_facebook"
        style="@style/login_circle_images"
        android:layout_marginBottom="84dp"
        android:src="@drawable/facebook_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/civ_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/civ_apple" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_apple"
        style="@style/login_circle_images"
        android:layout_marginBottom="84dp"
        android:src="@drawable/apple_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/civ_facebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_google"
        style="@style/login_circle_images"
        android:layout_marginBottom="84dp"
        android:src="@drawable/google_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/civ_facebook" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>